--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "portfinder": "^1.0.17",
     "sass-loader": "^7.1.0",
+    "socket.io-client": "^2.1.1",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
